# pdg

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  README.md  agents.md  configure  configure-mingw.ps1  configure.bat  configure.ps1
docs/: agents.md  bmpformat.html  index.php  pdg-js.js  pdg_header.html
src/: CMakeLists.txt  _gcc_fix.cpp  agents.md
src/app/: Application.cpp  ApplicationEx.cpp  Button.cpp  Cards.cpp  Checkbox.cpp  Controller.cpp  Dialog.cpp  Dice.cpp  DiceView.cpp  EditText.cpp  FloodLock.cpp  GameEngine.cpp  ListBox.cpp  MessageDialog.cpp  MessageView.cpp  ModalController.cpp  Observer.cpp  PopupMenu.cpp  RadioButton.cpp  Scrollbar.cpp  ScrollingView.cpp  TouchController.cpp  View.cpp
src/bindings/common/: pdg_script_impl.cpp  pdg_script_impl.h  pdg_script_interface.h
src/bindings/common/animation/: animated.cpp  animation_bindings.h  animation_impl_macros.h  animation_macros.h  sprite.cpp  sprite_layer.cpp  tile_layer.cpp
src/bindings/common/audio/: audio_bindings.h  sound.cpp  sound_manager.cpp
src/bindings/common/core/: config_manager.cpp  core_bindings.h  core_impl_macros.h  core_macros.h  event_manager.cpp  log_manager.cpp  timer_manager.cpp
src/bindings/common/data/: data_bindings.h  data_impl_macros.h  data_macros.h  deserializer.cpp  file_manager.cpp  mem_block.cpp  resource_manager.cpp  serializable.cpp  serializer.cpp
src/bindings/common/graphics/: attributes.cpp  drawing.cpp  font.cpp  graphics_bindings.h  graphics_impl_macros.h  graphics_macros.h  graphics_manager.cpp  image.cpp  polygon.cpp  port.cpp  spline.cpp
src/bindings/common/physics/: cp_arbiter.cpp  cp_constraint.cpp  cp_space.cpp  physics_bindings.h
src/bindings/javascript/: pdg.js
src/bindings/javascript/v8/: javascript_object_wrap.h  pdg_js_classes.cpp  pdg_js_macros.h  pdg_script_bindings.h  pdg_script_macros.h  pdg_v8_support.cpp  pdg_v8_support.h
src/bindings/node/: atomic-polyfill.h  pdg_bootstrap.js  pdg_main_v24.js  pdg_natives.h  pdg_node.cpp
src/inc/pdg/: framework.h  msvcfix.h  version.h
src/inc/pdg/app/: Application.h  ApplicationEx.h  Button.h  Cards.h  Checkbox.h  Controller.h  Dialog.h  Dice.h  DiceView.h  EditText.h  FloodLock.h  GameEngine.h  ListBox.h  MessageDialog.h  MessageView.h  ModalController.h  Observer.h  PopupMenu.h  README.md  RadioButton.h  Scrollbar.h  ScrollingView.h  TouchController.h  View.h  ZoomingView.h
src/inc/pdg/sys/: animated.h  attributes.h  color.h  coordinates.h  drawing.h  eventmanager.h  events.h  font.h  graphicsmanager.h  ianimationhelper.h  ideserializer.h  image.h  imagestrip.h  iserializer.h  ispritecollidehelper.h  ispritedrawhelper.h  mutex.h  os.h  platform.h  polygon.h  port.h  renderer.h  resource.h  serializable.h  sound.h  spline.h  sprite.h  spritelayer.h  timermanager.h
src/js/: color.js  coordinates.js  dump.js  eventemitter.js  ieventhandler.js  netclient.js  netconnection.js  netserver.js  pdg-defs.js
src/js/mvc-app/: Application.js  Button.js  Checkbox.js  Controller.js  Dialog.js  EditText.js  ListBox.js  MessageDialog.js  MessageView.js  ModalController.js  Observer.js  PopupMenu.js  README.md  RadioButton.js  Scrollbar.js  ScrollingView.js  TouchController.js  View.js  index.js  mocks.js  sample.js  test.js
src/sys/: animated.cpp  attributes.cpp  color.cpp  deserializer.cpp  drawing.cpp  eventemitter.cpp  eventmanager.cpp  font-fallback.cpp  font-fallback.h  font-impl.cpp  graphics-manager.cpp  graphics-opengl.cpp  graphics-opengl.h  image-impl.h  image-jpeg.cpp  image-opengl.cpp  image-opengl.h  image.cpp  imagecache-opengl-v2.cpp  imagecache-opengl-v2.h  imagecache-opengl.cpp  imagecache-opengl.h  include-opengl.h  internals.h  log.cpp  network-posix.cpp  opengl-state-cache.cpp  opengl-state-cache.h  os.cpp  pdg-lib.cpp  pdg-main.cpp  pdg-main.h  pdg_spriter_wrapper.cpp  polygon.cpp  port-renderer.cpp  resource.cpp  serializer-impl.h  serializer.cpp  spline.cpp  sprite.cpp  (+6 more)
src/sys/gles/: gles-hacks.c  gles-hacks.h  glues_quad.h
src/sys/glfw/: platform-events-glfw.cpp  platform-graphics-glfw.cpp
src/sys/ios/: EAGLView.h  EAGLView.m  ES1Renderer.h  ES1Renderer.mm  ES2Renderer.h  ES2Renderer.mm  ESRenderer.h  MainWindow.xib  PdgAppDelegate.h  PdgAppDelegate.mm  main-iphone.mm  platform-iphone.cpp
src/sys/ipad/: MainWindow.xib
src/sys/libjpeg-turbo/: README.md  jconfig-unix.h
src/sys/macosx/: audio_cleanup_manager.cpp  audio_cleanup_manager.h  graphics-macosx-opengl.cpp  internet-macosx.cpp  main-macosx.mm  pdg-lib-macosx.mm  pdg-opengl-view.mm  platform-dirs-macosx.cpp  platform-graphics-macosx.mm  sound-macosx.cpp  sound-macosx.h  sound-mgr-macosx.cpp  sound-mgr-macosx.h
src/sys/spriter/: pdg_bone_instance_info.cpp  pdg_bone_instance_info.h  pdg_box_instance_info.cpp  pdg_box_instance_info.h  pdg_file_factory.cpp  pdg_file_factory.h  pdg_image_file.cpp  pdg_image_file.h  pdg_object_factory.cpp  pdg_object_factory.h  pdg_point_instance_info.cpp  pdg_point_instance_info.h  pdg_spriter.h  pdg_spriter_file_document_wrapper.cpp  pdg_spriter_file_document_wrapper.h
src/sys/unix/: config-unix.cpp  image-unix.cpp  main-unix.cpp  os-unix.cpp
src/sys/win32/: config-win32.cpp  crash-handler-win32.cpp  graphics-win32-opengl.cpp  image-win32.cpp  os-win32.cpp  platform-win32.cpp  sound-directx.cpp  sound-mgr-directx.cpp  sound-mgr-directx.h
test/: .gitignore  InBrowserTests.html  agents.md  client  client.bat  client_test.js  debug  extract_natives.js  install-dependencies.ps1  lanes  lanes.bat  lanes.json  leaktest.js  mvc  node  node-pdg.bat  node.bat  node_test.js  physics_test.js  run_lanes.js  ui  ui.bat
tools/: DTrace_README.md  agents.md  check-missing-docs.js  check-tool.sh  colors.sh  copy-node-module-source.ps1  copy-node-module-source.sh  debug.html  dtrace-pdg-basic.d  dtrace-pdg-hitches.d  dtrace-pdg-profile.d  dtrace-pdg-simple.d  echo_tcp.js  gen-script-interface.ps1  gen-script-interface.sh  generate-cxx-doxygen-docs.sh  generate-doxygen-docs.sh  generate-js-docs.sh  install-node-modules.sh  js2c.py  (+26 more)
tools/bcpp/: CMakeLists.txt
(+2816 files in other folders)
