CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(PDG)

SET(CMAKE_BUILD_TYPE DEBUG)

OPTION(USE_CHIPMUNK "Build with Chipmunk Physics library" ON)
OPTION(USE_GLFW_MAC "Build with GLFW library on Mac OS X" OFF)
OPTION(USE_SPRITER "Build with support for Spriter animations" ON)
OPTION(CAN_BUILD_INTERFACES "Support rebuilding JavaScript Interfaces" OFF)

IF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	SET( MACOSX ON )
ENDIF()

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(PythonInterp 2.7)

IF (MACOSX)
	SET(BUILD_SUBDIR "darwin")
	SET(PLATFORM_SUBDIR "macosx")
	FIND_LIBRARY(APPKIT AppKit)
	FIND_LIBRARY(APPSERVICES ApplicationServices)
	FIND_LIBRARY(COREFOUND CoreFoundation)
	FIND_LIBRARY(AUDIOTOOLBOX AudioToolbox)
	FIND_LIBRARY(IOKIT IOKit)
ENDIF(MACOSX)

IF (WIN32)
	SET(BUILD_SUBDIR "win32")
	SET(PLATFORM_SUBDIR "win32")
ENDIF(WIN32)

ADD_SUBDIRECTORY(src)
